<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="not_have_acc">Don`t have account?</string>
    <string name="have_acc">Have account?</string>
    <string name="registration">Registration</string>
    <string name="ok">OK</string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="add_to_menu">Add to menu</string>
    <string name="settings">Settings</string>
    <string name="cafe_name">Кав\'ярня у Хвітсерка</string>
    <string name="error_fields">You must fill in all fields</string>
    <string name="name">Name</string>
    <string name="short_name">Shortname</string>
    <string name="price">Price</string>
    <string name="select">Select</string>
    <string name="add_image">Add photo</string>
    <string name="select_category">Select category</string>
    <string name="portion">Portion</string>
    <string name="export">Export menu</string>
    <string name="statistic">Statistic</string>
    <string name="storefront">Storefront</string>
    <string name="exit">Exit</string>
    <string name="g">г</string>
    <string name="pieces">pieces</string>
    <string name="ml">ml</string>
    <string name="add">Add</string>
    <string name="pattern_portion_size">%1d %2s</string>
    <string name="pattern_portion_price">%1s UAH</string>
    <string name="not_saving">You must fill in all fields and add photo</string>
    <string name="create_type_portion">Create new type of portion</string>
    <string name="create_category">Create new category</string>
</resources>