<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        android:text="@string/add_to_menu"
        android:textColor="@color/inactive_text_color"
        android:textSize="32sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:tint="@color/inactive_text_color"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader"
        app:srcCompat="@drawable/ic_arrow_back" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="#28000000"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/price"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilName">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPictureContainer"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginVertical="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/shape_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPrice" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddPicture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/add_image"
        app:layout_constraintBottom_toBottomOf="@id/ivPictureContainer"
        app:layout_constraintEnd_toEndOf="@id/ivPictureContainer"
        app:layout_constraintStart_toStartOf="@id/ivPictureContainer" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupTakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ivPictureContainer, ivPictureGallery, tvAddPicture" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPictureGallery"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/tvAddPicture"
        app:layout_constraintEnd_toEndOf="@id/ivPictureContainer"
        app:layout_constraintStart_toStartOf="@id/ivPictureContainer"
        app:layout_constraintTop_toTopOf="@id/ivPictureContainer"
        app:srcCompat="@drawable/ic_picture" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCategory"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:text="@string/select_category"
        android:textColor="@color/inactive_text_color"
        app:backgroundTint="@color/theme_color"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_category"
        app:iconTint="@color/inactive_text_color"
        app:layout_constraintTop_toBottomOf="@id/ivPictureContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btTypePortion"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:textColor="@color/inactive_text_color"
        android:layout_marginHorizontal="16dp"
        android:text="@string/select"
        app:backgroundTint="@color/theme_color"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tilPortion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilPortion" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPortion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/portion"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/btTypePortion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btCategory">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPortion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:text="@string/add"
        android:textColor="@color/active_text_color"
        app:backgroundTint="@color/theme_color"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>