<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCafeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        android:text="@string/cafe_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/dividerBig"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="#28000000"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCafeName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvExport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_export"
        android:drawablePadding="8dp"
        android:drawableTint="@color/active_text_color"
        android:gravity="center_vertical"
        android:text="@string/export"
        android:textColor="@color/active_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerBig" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/inactive_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExport" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStatistic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_statistic"
        android:drawablePadding="8dp"
        android:drawableTint="@color/active_text_color"
        android:gravity="center_vertical"
        android:text="@string/statistic"
        android:textColor="@color/active_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/inactive_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatistic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStorefront"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_storefront"
        android:drawablePadding="8dp"
        android:drawableTint="@color/active_text_color"
        android:gravity="center_vertical"
        android:text="@string/storefront"
        android:textColor="@color/active_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/inactive_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStorefront" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ivExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_exit"
        android:drawablePadding="8dp"
        android:drawableTint="@color/active_text_color"
        android:gravity="center_vertical"
        android:text="@string/exit"
        android:textColor="@color/active_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/inactive_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivExit" />


</androidx.constraintlayout.widget.ConstraintLayout>